@@ -40,6 +40,7 @@ Bugfixes:
  - Qt: Fix being unable to pause manually when using auto-pausing
  - GBA Memory: Fix ldm {pc}
  - GBA Video: Fix out-of-order OBJWIN
+ - GBA: Count up timers should not count themselves
 Misc:
  - 3DS: Use blip_add_delta_fast for a small speed improvement
  - OpenGL: Log shader compilation failure
